tenants/hooli/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  annotations: {}
spec:
  tls:
  - hosts:
    - hooli.plaidcloud.io
    - app.hooli.plaidcloud.io
    - superset.hooli.plaidcloud.io
    - sql.hooli.plaidcloud.io
    secretName: ssl-cert
  rules:
  - host: hooli.plaidcloud.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tenant-wordpress
            port:
              number: 80
        
  - host: superset.hooli.plaidcloud.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tenant-superset
            port:
              number: 9000

  - host: sql.hooli.plaidcloud.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tenant-pgadmin4
            port:
              number: 80

  - host: app.hooli.plaidcloud.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tenant-streamlit
            port:
              number: 8501
